5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
/* ... */
.lang-es input[type=radio].sheet-tab-button.sheet-core,
.lang-es input[type=radio].sheet-tab-button.sheet-core + span {
    right: 137px;
    width: 76px;
}

.lang-es input[type=radio].sheet-tab-button.sheet-bio,
.lang-es input[type=radio].sheet-tab-button.sheet-bio + span {
    right: 103px;
    width: 30px;
}

.lang-es input[type=radio].sheet-tab-button.sheet-spells,
.lang-es input[type=radio].sheet-tab-button.sheet-spells + span {
    right: 21px;
    width: 78px;
}

/* Czech */
.charsheet.lang-cs input[type=radio].sheet-tab-button.sheet-core,
.charsheet.lang-cs input[type=radio].sheet-tab-button.sheet-core + span {
    width: 53px;
}

.charsheet.lang-cs select[name=attr_cust_spellslots] {
    font-size: 9px;
}

.charsheet.lang-cs .sheet-spell .sheet-options span[data-i18n="at-higher-lvl-dmg:-u"],
.charsheet.lang-cs .sheet-spell .sheet-options span[data-i18n="add-ability-mod-u"],
.charsheet.lang-cs .sheet-spell .sheet-options span[data-i18n="saving-throw:-u"],
.charsheet.lang-cs .sheet-spell .sheet-options span[data-i18n="effect:-u"],
.charsheet.lang-cs .sheet-ac-init-speed-container .sheet-ac > span {
    font-size: 8px;
}

.charsheet.lang-cs .sheet-subcontainer .sheet-top span[data-i18n="total"] + input {
    width: 75px;
}

.charsheet.lang-cs .sheet-row span[data-i18n="senses-u"] + input,
.charsheet.lang-cs .sheet-row span[data-i18n="npc-type-u"] + input {
    width: 220px;
}

.charsheet.lang-cs .sheet-class {
    width: 79px;
}

.charsheet.lang-cs .sheet-hlabel-container .sheet-multiclass-display {
    width: 62px;
}

.charsheet.lang-cs .sheet-hlabel-container .sheet-multiclass-display-level {
    width: 23px;
}

.charsheet.lang-cs .sheet-hlabel-container input.sheet-class-level {
    width: 28px;
}

/* Italian */
.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-core,
.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-core + span {
    right: 146px;
    width: 60px;
}

.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-bio,
.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-bio + span {
    right: 113px;
    width: 30px;
}

.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-spells,
.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-spells + span {
    right: 20px;
    width: 90px;
}

.charsheet.lang-it div.sheet-licensecontainer .sheet-container.sheet-pc .sheet-spells .sheet-header .sheet-header-info .sheet-part {
    width: 23%;
}

.charsheet.lang-it div.sheet-licensecontainer .sheet-container:not(.sheet-npc) div.sheet-page div.sheet-header div.sheet-name-container span {
    margin-top: 19px;
    margin-left: 30px;
}

.charsheet.lang-it .sheet-header .sheet-part input[type="text"], .charsheet .sheet-header .sheet-part select {
    height: 46px;
}

.charsheet.lang-it .sheet-header .sheet-part span.sheet-display {
    height: 46px;
}

/*******************
 * CHARACTERMANCER *
 *******************/
.sheet-charmancer.sheet-container {
    width: 100%;
    display: flex;
    flex-flow: row wrap;
    flex-basis: 1 1 100%;
    position: relative;
    contain: paint;
}
.sheet-charmancer .sheet-choices {
    flex: 40%;
    max-width: 40%;
    padding-right: 1em;
}
.sheet-charmancer .sheet-info {
    flex: 60%;
    position: relative;
    max-width: calc(60% - 2em);
}
.sheet-charmancer .sheet-choices,
.sheet-charmancer .sheet-info {
    margin-bottom: 2em;
}
.sheet-charmancer .sheet-compendium-page {
    height: 100%;
}
.sheet-charmancer iframe {
    height: 100%;
    min-height: 50vh;
    contain: paint;
}
.sheet-charmancer select option:disabled {
    background-color: #eee;
}
.sheet-charmancer select span.sheet-initials {
    font-size: 6px;
}
.sheet-charmancer .sheet-topbar-holder {
    width: 100%;
}
.sheet-charmancer .sheet-topbar,
.sheet-charmancer .sheet-leveler-topbar {
    flex: 100%;
    margin-bottom: 15px;
}
.sheet-charmancer .sheet-topbar div div,
.sheet-charmancer .sheet-leveler-topbar div div {
    display: inline-block;
    width: 16%;
    border: 1px solid gray;
    text-align: center;
}
.sheet-charmancer .sheet-topbar div span,
.sheet-charmancer .sheet-leveler-topbar div span {
    font-size: 3em;
    line-height: 1em;
    font-weight: bold;
}
.sheet-charmancer .sheet-leveler-topbar div span {
    font-size: 2.5em;
}
.sheet-charmancer .sheet-topbar div.sheet-meta-info-container,
.sheet-charmancer .sheet-leveler-topbar div.sheet-meta-info-container {
    display: flex;
    width: 100%;
    border: 0;
    align-items: center;
    justify-content: space-between;
}
.sheet-charmancer .sheet-topbar div.sheet-meta-info-container  span,
.sheet-charmancer .sheet-leveler-topbar div.sheet-meta-info-container  span {
    font-size: 1.2em;
}
.sheet-charmancer .sheet-topbar div.sheet-meta-info-container  span.sheet-choice,
.sheet-charmancer .sheet-leveler-topbar div.sheet-meta-info-container  span.sheet-choice {
    display: none;
}
.sheet-charmancer .sheet-steps {
    position: sticky;
    padding: .5em 0;
    background: #fff;
    z-index: 1011;
    top: 0;
    border-bottom: 1px dashed #ddd;
    list-style: none;
    list-style-position: inside;
    flex: 100%;
    margin: 0 0 1em;
    display: flex;
    flex-flow: row;
    justify-content: space-between;
    transform: translateZ(0);
}
.sheet-charmancer .sheet-lp-steps {
    width: 100%;
    display: block;
    flex: none;
}
.sheet-charmancer .sheet-lp-steps li {
    display: inline;
    margin-right: .5em;
}
.sheet-charmancer .sheet-lp-steps li:last-of-type {
    float: right;
}
.sheet-charmancer button,
.sheet-charmancer button[type=roll] {
    border: 1px solid black;
    border-radius: 5px;
    background-color: #E8E8E8;
    color: black;
    text-align: center;
    font-weight: bold;
}
.sheet-charmancer button[type=roll] {
    padding: 1px 6px;
    font-size: 13px;
    margin: 0;
}
.sheet-charmancer button[type=roll]:before {
    content: '';
}
.sheet-charmancer button.sheet-step {
    border-color: black;
    background-color: white;
    color: black;
}
/* ... */

